[package]
authors = ['Junius Zhou <junius@litentry.com>']
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'litentry-token-server'
repository = 'https://github.com/litentry/litentry-node/'
version = '2.0.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
serde_json = "1.0.60"
