[package]
name = "bitacross-cli"
version = "0.0.1"
authors = ['Trust Computing GmbH <info@litentry.com>', 'Integritee AG <hello@integritee.network>']
edition = "2021"

[dependencies]
array-bytes = { version = "6.0.0" }
base58 = "0.2"
chrono = "*"
clap = { version = "=4.1.0", features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
env_logger = "0.9"
hdrhistogram = "7.5.0"
hex = "0.4.2"
log = "0.4"
rand = "0.8.5"
rayon = "1.5.1"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
thiserror = "1.0"
urlencoding = "2.1.3"

# scs / integritee
ita-parentchain-interface = { path = "../app-libs/parentchain-interface" }
substrate-api-client = { default-features = false, features = ["std", "sync-api"], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.14.0" }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.14.0" }

# substrate dependencies
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# local dependencies
ita-stf = { path = "../app-libs/stf" }
itc-rpc-client = { path = "../core/rpc-client" }
itp-node-api = { path = "../core-primitives/node-api" }
itp-rpc = { path = "../core-primitives/rpc" }
itp-sgx-crypto = { path = "../core-primitives/sgx/crypto" }
itp-stf-primitives = { path = "../core-primitives/stf-primitives" }
itp-types = { path = "../core-primitives/types" }
itp-utils = { path = "../core-primitives/utils" }

# litentry
bc-musig2-ceremony = { path = "../bitacross/core/bc-musig2-ceremony" }
lc-direct-call = { path = "../litentry/core/direct-call" }
litentry-primitives = { path = "../litentry/primitives" }

[features]
default = []
offchain-worker = []
development = []
# dcap feature flag is not used in this crate, but for easier build purposes only it present here as well
dcap = []
