[package]
name = 'bitacross-worker'
version = '0.0.1'
authors = ['Trust Computing GmbH <info@litentry.com>', 'Integritee AG <hello@integritee.network>']
build = 'build.rs'
edition = '2021'

[dependencies]
async-trait = "0.1.50"
base58 = "0.2"
clap = { version = "2.33", features = ["yaml"] }
dirs = "3.0.2"
env_logger = "0.9"
futures = "0.3"
hex = "0.4.3"
humantime = "2.1"
jsonrpsee = { version = "0.2.0", features = ["client", "ws-server", "macros"] }
lazy_static = "1.4.0"
log = "0.4"
parking_lot = "0.12.1"
parse_duration = "2.1.1"
prometheus = { version = "0.13.0", features = ["process"], default-features = false } # Enabling std lead to protobuf dependency conflicts with substrate, and we don't need it.
rayon = "1.10.0"
regex = "1.9.5"
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.6.1", features = ["full"] }
url = "2.5.0"
warp = "0.3"

# ipfs
ipfs-api = "0.11.0"

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# local
ita-parentchain-interface = { path = "../app-libs/parentchain-interface" }
itc-parentchain = { path = "../core/parentchain/parentchain-crate" }
itc-rest-client = { path = "../core/rest-client" }
itc-rpc-client = { path = "../core/rpc-client" }
itp-api-client-types = { path = "../core-primitives/node-api/api-client-types" }
itp-enclave-api = { path = "../core-primitives/enclave-api" }
itp-enclave-metrics = { path = "../core-primitives/enclave-metrics" }
itp-node-api = { path = "../core-primitives/node-api" }
itp-settings = { path = "../core-primitives/settings" }
itp-stf-interface = { path = "../core-primitives/stf-interface" }
itp-storage = { path = "../core-primitives/storage" }
itp-time-utils = { path = "../core-primitives/time-utils" }
itp-types = { path = "../core-primitives/types" }
itp-utils = { path = "../core-primitives/utils" }

# `default-features = false` to remove the jsonrpsee dependency.
substrate-api-client = { default-features = false, features = ["std", "sync-api"], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.14.0" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", features = ["full_crypto"] }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# litentry
config = "0.13.3"
litentry-macros = { path = "../../primitives/core/macros", default-features = false }
litentry-primitives = { path = "../litentry/primitives" }

[features]
default = []
offchain-worker = ["itp-settings/offchain-worker"]
development = [
    "itp-settings/development",
    "litentry-macros/development",
    "litentry-primitives/development",
]
dcap = []
attesteer = ["dcap"]
# Must be enabled to build a binary and link it with the enclave successfully.
# This flag is set in the makefile.
#
# Must not be enabled to run cargo test without an sgx-sdk providing environment
# https://github.com/rust-lang/cargo/issues/2549.
#
# It has been chosen to not make this a default feature because this makes test execution
# more ergonomic as we can simply do `cargo test` on the whole workspace like this.
link-binary = [
    "itp-enclave-api/implement-ffi",
]

[dev-dependencies]
# crates.io
anyhow = "1.0.40"
mockall = "0.11"
# local
itc-parentchain-test = { path = "../core/parentchain/test" }
itp-sgx-crypto = { path = "../core-primitives/sgx/crypto" }
