[package]
authors = ['Junius Zhou <junius@litentry.com>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-account-linker'
repository = 'https://github.com/litentry/litentry-node'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sha2 = { default-features = false, version = "0.9.2" }
ripemd160 = {default-features = false, version = "0.9.1" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
parity-crypto = {version = "0.4.0", features = ["publickey"] }
bitcoin = { version = "0.25.2", features = ["rand"] }
hex = "0.4.2"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-std/std",
    "sha2/std",
    "ripemd160/std",
]
